--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
-body{
-    background-color: blueviolet;
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+
+}
+.centratura{
+max-width: 1000px;
+margin: 0 auto;
+
 }
